--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,4 +1,4 @@
-name: Stage Actions
+name: Version and Release
 on:
   push:
     branches:
@@ -9,12 +9,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          token: ${{ secrets.TOKEN_ACTION }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Bump version and push tag
         id: changelog
         uses: TriPSs/conventional-changelog-action@v3
         with:
-          github-token: ${{ secrets.TOKEN_ACTION }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           skip-on-empty: "true"
           tag-prefix: "v"
       - name: Debug
